Create an ArithmeticOperation interface